@@ -1,6 +1,6 @@
 project('mpdscribble', 'cpp',
   version: '0.26',
-  meson_version: '>= 0.47',
+  meson_version: '>= 0.56',
   default_options: [
     'cpp_std=c++2a',
     'warning_level=3',
